--- a/app/views/styleguides/index.html.erb
+++ b/app/views/styleguides/index.html.erb
@@ -1,4 +1,8 @@
 <% content_for :title, "Home" %>
+<% content_for :class_for_body, "sg-homepage" %>
+
+<h2 class="sg-h1 sg-homepage-heading txt-center">Westfield Style Guide</h2>
+
 <!-- Default Element Styles -->
 <div class="sg-section">
   <div class="sg-h2"><%= link_to 'Base', styleguide_path('base') %></div>
