Added toggle visibility example

--- a/app/views/styleguides/abstractions/_toggle_visibility.html.erb
+++ b/app/views/styleguides/abstractions/_toggle_visibility.html.erb
@@ -1,2 +1,7 @@
 <%= styleguide_block 'Toggle Visibility' do |style| %>
+<button toggle-visibility="toggle-text">Toggle</button>
+<div class="toggle-visibility" id="toggle-text">
+  <p>Here's some text that shows and hide.</p>
+</div>
+
 <% end %>
