Added base styles

--- a/app/views/styleguides/base.html.erb
+++ b/app/views/styleguides/base.html.erb
@@ -1,6 +1,8 @@
 <div class="sg-section">
   <div class="sg-h1">Base</div>
-  <div class="box island">This covers the default colours, typography, link and list styles</div>
+  <div class="box island">This covers the default colours, typography, link, list and table styles</div>
 </div>
 
 <%= render 'styleguides/base/typography' %>
+
+<%= render 'styleguides/base/tables' %>
