--- a/app/views/styleguides/base/_typography.html.erb
+++ b/app/views/styleguides/base/_typography.html.erb
@@ -1,13 +1,68 @@
-<%= styleguide_block 'Headings' do %>
-  <h1>Heading 1</h1>
+<%# Headings %>
+<%= styleguide_block_static "Headings" do %>
+<h1>Heading 1</h1>
 
-  <h2>Heading 2</h2>
+<h2>Heading 2</h2>
 
-  <h3>Heading 3</h3>
+<h3>Heading 3</h3>
 
-  <h4>Heading 4</h4>
+<h4>Heading 4</h4>
 
-  <h5>Heading 5</h5>
+<h5>Heading 5</h5>
 
-  <h6>Heading 6</h6>
+<h6>Heading 6</h6>
 <% end %>
+<%# //Headings %>
+
+<%# Paragraph %>
+<%= styleguide_block_static "Paragraph" do %>
+<p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit</p>
+<p>Ne mel utroque apeirian, eum ex cibo choro. Discere commune concludaturque eum te, eros movet comprehensam eum id.</p>
+<% end %>
+<%# //Paragraph %>
+
+<%# Unordered list %>
+<%= styleguide_block_static "Unordered Lists" do %>
+<ul class="list">
+  <li>Semper apeirian</li>
+  <li>Virtute omittam</li>
+  <li>Cu verear euripidis</li>
+  <li>Natoque penatibus amet</li>
+</ul>
+<% end %>
+<%# //Unordered list %>
+
+<%# Ordered list %>
+<%= styleguide_block_static "Ordered Lists" do %>
+<ol class="list">
+  <li>Semper apeirian</li>
+  <li>Virtute omittam</li>
+  <li>Cu verear euripidis</li>
+  <li>Natoque penatibus amet</li>
+</ol>
+<% end %>
+<%# //Ordered list %>
+
+<%# Anchor %>
+<%= styleguide_block_static "Anchor" do %>
+<a href="#">Anchor element</a>
+<% end %>
+<%# //Anchor %>
+
+<%# Abbreviation %>
+<%= styleguide_block_static "Abbreviation", "Abbreviation is used to provide additional context to abbreviated text. A `title` attribute with the full text as the value is always needed." do %>
+<abbr title="attribute">attr</abbr>
+<% end %>
+<%# //Abbreviation %>
+
+<%# Bold %>
+<%= styleguide_block_static "Bold", "Use the `strong` tag to represent strong importance for its contents." do %>
+<strong>Very important text</strong>
+<% end %>
+<%# //Bold %>
+
+<%# Italic %>
+<%= styleguide_block_static "Italic", "Use the `em` tag to stress emphasis of its content. By default it doesn't come with any styling as content that needs emphasis doesn't always needs to be italics." do %>
+<em>stressing the emphasis</em>
+<% end %>
+<%# //Italic %>
