Changing the centre home page tile label to a H2

--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -2,7 +2,7 @@
 
   <%# Tile indentifier for centre home page only %>
   <% unless params[:controller] == result.kind.pluralize %>
-    <em class="hide-visually"><%= result.kind.titlecase %></em>
+    <h2 class="hide-visually"><%= result.kind.titlecase %></h2>
   <% end %>
   <%# //Tile indentifier for centre home page only %>
 
