Add meta data to error pages

--- a/app/views/layouts/server_errors.html.erb
+++ b/app/views/layouts/server_errors.html.erb
@@ -32,7 +32,8 @@
     </div>
   </div>
 
-  <%=raw third_party_universal_tagging %>
+  <%= include_gon(namespace: :westfield) %>
+  <%= raw third_party_universal_tagging %>
 
 </body>
 
