Separate styleguide CSS into partials and various updates

--- a/app/assets/stylesheets/styleguide/_main.scss
+++ b/app/assets/stylesheets/styleguide/_main.scss
@@ -1,212 +1,6 @@
 /* ======================================================================================
-   @VARIABLES
+   @MAIN
    ====================================================================================== */
-$sg-breakpoint: 890;
-
-/* ======================================================================================
-   @LAYOUT
-   ====================================================================================== */
-.styleguides {background: $color-grey-light-3;}
-
-/* [HEADER]
--------------------------------------------------------*/
-.sg-header {
-  @extend %mrg-base;
-  background-color: #fff;
-  @include to-rem(min-height, 44);
-  border-bottom: 1px solid $color-grey-med-2;
-
-  /* Inner container */
-  .container {
-    @include to-rem(padding-top padding-bottom, 7);
-
-    @include respond-min($non-palm) {
-      @include to-rem(padding-top, 10);
-    }
-  }
-
-  /* Style guide heading */
-  h1 {
-    display: inline-block;
-    @include to-rem(margin, 5 0 0 5);
-    @include font-size(22, 1.2);
-    text-transform: uppercase;
-  }
-
-  /* Menu (hamburger) toggle button */
-  .btn--menu {
-    position: absolute;
-    right: 0;
-
-    @include respond-min($sg-breakpoint) {
-      display: none;
-    }
-  }
-
-    /* The three lines in icon */
-    .btn--menu__icon {
-      &,
-      &:before,
-      &:after {background-color: $color-grey-med-2;}
-    }
-
-  /* Main nav */
-  .sg-nav-main {
-    @include to-rem(max-height, $drop-down-max-height);
-
-    /* Set main nav to be horizontal at this breakpoint */
-    @include respond-min($sg-breakpoint) {
-      display: block;
-      position: absolute;
-      right: 0;
-      @include to-rem(top, $spacing-half);
-    }
-
-    /* Touch device */
-    .touch & {
-      overflow-y: scroll;
-      -webkit-overflow-scrolling: touch;
-    }
-
-    /* Nav items */
-    li {
-      border-top-width: 1px;
-      border-color: $color-grey-med-3;
-      border-style: solid;
-
-      &:first-child {border-top: 0;}
-
-      /* Set nav items to display horizontally and give them border-left */
-      @include respond-min($sg-breakpoint) {
-        display: inline-block;
-        vertical-align: middle;
-        border-width: 0;
-      }
-    }
-
-      a {
-        display: block;
-        color: $color-grey-med-1;
-        @include to-rem(padding, $spacing-third $spacing-half);
-
-        &:hover,
-        &:focus {color: $color-brand;}
-      }
-  }
-}
-
-
-/* [CONTENT]
--------------------------------------------------------*/
-
-.sg-content {
-  @include to-rem(margin-bottom, $spacing-dbl);
-  @extend %clear-fix;
-}
-
-  /* Main - allows it to be fluid while the aside is fixed width */
-  @include respond-min($sg-breakpoint) {
-    .sg-main {
-      display: table-cell;
-      width: 10000px;
-    }
-  }
-
-  /* Aside */
-  .sg-aside {
-    @include respond-min($sg-breakpoint) {
-      float: left;
-      width: 300px;
-      max-height: 200px;
-      @include to-rem(padding-right, $spacing-dbl);
-
-      @include respond-min($sg-breakpoint) {
-        max-height: none;
-      }
-    }
-
-    /* Nav */
-    ul {
-      overflow-y: auto;
-      max-height: 190px;
-      @include to-rem(padding, $spacing-half);
-      @include to-rem(margin-bottom, $spacing-base);
-      background: #42444d;
-
-      @include respond-min($sg-breakpoint) {
-        max-height: none;
-      }
-    }
-
-      li {
-        margin-top: 2px;
-        color: #073642;
-
-        &:first-child {margin: 0;}
-
-          /* Links */
-          span,
-          a {
-            display: block;
-            padding: 3px 6px;
-          }
-
-          a {
-            color: $color-blue;
-
-            &:before {
-              content: "⇢";
-              display: inline-block;
-              font: normal 16px/.7 "Arial Unicode MS Regular", "Arial Unicode MS", Arial, Helvetica, sans-serif;
-              vertical-align: text-top;
-              margin-right: 6px;
-            }
-
-            &:hover,
-            &.active {color: #fff;}
-          }
-      }
-}
-
-/* ======================================================================================
-   @HEADINGS
-   ====================================================================================== */
-/* Shared rules */
-.sg-h1,
-.sg-h2 {@include to-rem(margin-bottom, $spacing-half);}
-
-.sg-h1 {
-  font-weight: 300;
-  @include font-size(30);
-  font-family: $font-family-lato;
-}
-
-.sg-h2 {
-  @include font-size($font-size-xlrg);
-  font-family: $font-family-opensans;
-  color: $color-txt-light;
-
-  /* File name */
-  code {@include font-size($font-size-lrg);}
-}
-
-.sg-h3 {
-  font-weight: bold;
-  @include to-rem(margin-bottom, $spacing-half);
-}
-
-/* ======================================================================================
-   @EVERYTHING ELSE
-   ====================================================================================== */
-
-/* [HOMEPAGE]
--------------------------------------------------------*/
-.sg-homepage .sg-header {@include to-rem(margin-bottom, $spacing-dbl+$spacing-dbl);}
-
-  .sg-homepage-heading {
-    text-transform: uppercase;
-    @include font-size(60);
-  }
 
 /* [SECTION]
 -------------------------------------------------------*/
@@ -221,9 +15,6 @@ $sg-breakpoint: 890;
     &,
     p {@extend %mrg-base;}
   }
-
-  /* Sub section */
-  .sg-section-sub {@extend %mrg-btm;}
 
 /* [EXAMPLE]
 -------------------------------------------------------*/
