--- a/app/assets/stylesheets/styleguide/styleguide.scss
+++ b/app/assets/stylesheets/styleguide/styleguide.scss
@@ -25,4 +25,7 @@ Style Guide stylesheet
   @import "../partials/utils/placeholders/bottom-spacing";
 
 /* Style guide */
+@import "vars";
+@import "layout";
+@import "headings";
 @import "main";
