--- a/app/views/styleguides/base/_typography.html.erb
+++ b/app/views/styleguides/base/_typography.html.erb
@@ -27,7 +27,14 @@
   <li>Semper apeirian</li>
   <li>Virtute omittam</li>
   <li>Cu verear euripidis</li>
-  <li>Natoque penatibus amet</li>
+  <li>Natoque penatibus amet
+    <ul class="list">
+      <li>Semper apeirian</li>
+      <li>Virtute omittam</li>
+      <li>Cu verear euripidis</li>
+      <li>Natoque penatibus amet</li>
+    </ul>
+  </li>
 </ul>
 <% end %>
 <%# //Unordered list %>
@@ -38,7 +45,14 @@
   <li>Semper apeirian</li>
   <li>Virtute omittam</li>
   <li>Cu verear euripidis</li>
-  <li>Natoque penatibus amet</li>
+  <li>Natoque penatibus amet
+    <ol class="list">
+      <li>Semper apeirian</li>
+      <li>Virtute omittam</li>
+      <li>Cu verear euripidis</li>
+      <li>Natoque penatibus amet</li>
+    </ol>
+  </li>
 </ol>
 <% end %>
 <%# //Ordered list %>
