--- a/app/views/styleguides/index.html.erb
+++ b/app/views/styleguides/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "Home" %>
 <% content_for :class_for_body, "sg-homepage" %>
 
-<h2 class="sg-h1 sg-homepage-heading txt-center">Westfield Style Guide</h2>
+<h2 class="sg-h1">Westfield Style Guide</h2>
 
 <!-- Default Element Styles -->
 <div class="sg-section">
