Fix up SG comments and small updates

--- a/app/assets/stylesheets/styleguide/partials/base/_main.scss
+++ b/app/assets/stylesheets/styleguide/partials/base/_main.scss
@@ -2,5 +2,4 @@
    @BASE -> MAIN
    ====================================================================================== */
 
-/* Class on `body` */
-.styleguides {background: $color-grey-light-3;}
+body {background: $color-grey-light-3;}
