--- a/app/assets/stylesheets/styleguide/partials/modules/_code-block.scss
+++ b/app/assets/stylesheets/styleguide/partials/modules/_code-block.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-  Example code block
+  Example code block. Syntax highlighting uses Prism.
 */
 
 .sg-code-block {
