--- a/app/assets/stylesheets/styleguide/partials/base/_headings.scss
+++ b/app/assets/stylesheets/styleguide/partials/base/_headings.scss
@@ -1,5 +1,5 @@
 /* ======================================================================================
-   @HEADINGS
+   @BASE -> @HEADINGS
    ====================================================================================== */
 /* Shared rules */
 .sg-h1,
