--- a/app/assets/stylesheets/styleguide/partials/utils/_overrides.scss
+++ b/app/assets/stylesheets/styleguide/partials/utils/_overrides.scss
@@ -1,5 +1,5 @@
 /* ======================================================================================
-   @OVERRIDES -> OVERRIDES
+   @UTILS -> OVERRIDES
    ====================================================================================== */
 
 /*
