Change styleguides to styleguide

--- a/app/assets/stylesheets/styleguide/partials/utils/_overrides.scss
+++ b/app/assets/stylesheets/styleguide/partials/utils/_overrides.scss
@@ -10,7 +10,7 @@
 .btn--site-feedback {
 
   /* Hide the default version */
-  .styleguides & {display: none;}
+  .styleguide & {display: none;}
 
   /* Force feedback button to show in example */
   .sg-section & {
