--- a/app/views/styleguide/base.html.erb
+++ b/app/views/styleguide/base.html.erb
@@ -3,6 +3,6 @@
   <div class="box island">This covers the default colours, typography, link, list and table styles</div>
 </div>
 
-<%= render 'styleguides/base/typography' %>
+<%= render 'styleguide/base/typography' %>
 
-<%= render 'styleguides/base/tables' %>
+<%= render 'styleguide/base/tables' %>
