--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -49,7 +49,10 @@
   }
 
   /* Non JS users */
-  .no-js & {position: static;}
+  .no-js & {
+    position: static;
+    @include to-rem(padding-bottom, $spacing-base);
+  }
 
   /* Location icon */
   .icon--pin:before {
@@ -133,6 +136,7 @@
     .no-js & {
       position: static;
       width: auto;
+      @include to-rem(margin-bottom, $spacing-base);
     }
   }
 
@@ -182,6 +186,9 @@
         }
       }
 
+      /* Non JS users */
+      .no-js & {@extend %mrg-base;}
+
       /* Inner container */
       > .container {
         @include to-rem(padding-top padding-bottom, $spacing-half);
@@ -190,11 +197,6 @@
         /* Increase padding at this breakpoint */
         @include respond-min($non-palm) {
           @include to-rem(padding-top padding-bottom, $spacing-half+$spacing-quarter);
-        }
-
-        /* Remove bottom padding for 'Listing' view at this breakpoint */
-        @include respond-min($ipad-landscape) {
-          .stores-maps__inner--listing & {padding-bottom: 0;}
         }
       }
     }
@@ -206,10 +208,10 @@
         @include font-size($font-size-xlrg, 1.5);
         color: $color-txt-dark;
 
-        /* Hide the header and add bottom margin at this breakpoint */
+        /* Bring the header into view and add bottom margin at this breakpoint */
         @include respond-min($ipad-landscape) {
           @include hide-visually-off;
-          @include to-em(margin-bottom, $spacing-third);
+          @include to-em(margin-bottom, $spacing-sixth);
         }
 
         /* Hide when in map view */
@@ -247,9 +249,7 @@
             &:focus > span {color: $color-link-hover;}
           }
 
-      /* --Filters-- */
-
-      /* 'Categories' and 'Gift card toggle' */
+      /* Category filter */
       .stores-maps__filters {
         float: left;
 
@@ -272,7 +272,51 @@
           @include respond-min($non-palm) {
             .drop-down-menu__trigger {@include to-em(padding-right, $spacing-dbl+$spacing-base);}
           }
+
+          /* Gift card toggle */
+          .btn--main-checkbox-toggle {
+
+            /* Reveal text at this breakpoint */
+            @include respond-min($non-palm) {
+              .hide-visually {@include hide-visually-off;}
+            }
+
+            /* Icon */
+            .icon--gift-card:before {
+              color: #fff;
+              @include to-rem(margin-left, $spacing-quarter);
+            }
+          }
+
+          /* Applied filter tag */
+          .tags__btn {
+            background-color: $color-grey-light-2;
+
+            /* Increase `max-width` at these breakpoints */
+            @include respond-min(400) {
+              @include to-rem(max-width, 174);
+            }
+
+            @include respond-min($iphone-landscape) {
+              @include to-rem(max-width, 213);
+            }
+
+            /* Button text (truncate) */
+            .txt-truncate {
+              @include to-em(padding-top, $spacing-half+$spacing-micro);
+              @include to-em(padding-bottom, $spacing-half+$spacing-micro+1);
+            }
+          }
       }
+
+        /* Filter items */
+        .stores-maps__filters__item {
+          display: inline-block;
+          vertical-align: middle;
+          @include to-rem(margin-right, $spacing-half);
+
+          &:last-child {margin-right: 0;}
+        }
 
       /* Toggle button */
       .stores-maps__toggle {
@@ -322,7 +366,20 @@
       right: 0;
       overflow-y: auto;
 
-      /* Make white bg for 'listing view' */
+      /* Alter top positioning at this breakpoint */
+      @include respond-min($non-palm) {
+        @include to-rem(top, 65);
+      }
+
+      /* Apply box treatments and alter top/btm positioning at this breakpoint */
+      @include respond-min($ipad-landscape) {
+        @include to-rem(top, 151);
+        @include to-rem(bottom, $spacing-base);
+        @include box;
+        @include box-heavy;
+      }
+
+      /* Listing view */
       .stores-maps__inner--listing & {background-color: #fff;}
 
       /* Detail view */
@@ -330,10 +387,21 @@
         position: static;
         overflow-y: visible;
 
-        /* Bring back absolute positioning and auto scrolling at this breakpoint */
+        /* Bring back absolute positioning, auto scrolling and pointer events at this breakpoint */
         @include respond-min($ipad-landscape) {
           position: absolute;
+          @include to-rem(top, 110);
+          bottom: auto;
           overflow-y: auto;
+          pointer-events: auto;
+        }
+      }
+
+      /* Detail view - when they're 'Featured items' */
+      @include respond-min($ipad-landscape) {
+        .stores-maps__inner--detail.is-featured-items & {
+          background-color: $color-grey-light-2;
+          @include to-rem(bottom, $spacing-base);
         }
       }
 
@@ -359,32 +427,6 @@
       /* Old IE - change the bg colour */
       @include old-ie {
         .stores-maps .stores-maps__inner.stores-maps__inner--detail & {background-color: lighten($color-grey-light-2, 5%);}
-      }
-
-      /* Alter top positioning at this breakpoint */
-      @include respond-min($non-palm) {
-        @include to-rem(top, 65);
-      }
-
-      /* Apply box treatments and alter top/btm positioning at this breakpoint */
-      @include respond-min($ipad-landscape) {
-        @include to-rem(top, 151);
-        @include to-rem(bottom, $spacing-base);
-        @include box;
-        @include box-heavy;
-
-        /* Detail view */
-        .stores-maps__inner--detail & {
-          bottom: auto;
-          pointer-events: auto;
-          @include to-rem(top, 110);
-        }
-
-        /* Detail view - when they're 'Featured items' */
-        .stores-maps__inner--detail.is-featured-items & {
-          background-color: $color-grey-light-2;
-          @include to-rem(bottom, $spacing-base);
-        }
       }
 
       /* --Store list module-- */
